# project_fin_module_tourisme

./: .gitignore  README.md  langgraph.json  pyproject.toml
data/corpus/: README.md
data/corpus/culture/: artisanat.md  festivals.md  gastronomie.md  unesco-sites.md
data/corpus/practical/: infos-pratiques.md
data/corpus/regions/: agadir.md  atlas-toubkal.md  casablanca.md  chefchaouen.md  essaouira.md  fes.md  marrakech.md  rabat.md  sahara-merzouga.md  tanger.md
eval/: questions.json
notebooks/: demo.ipynb
report/: build_report.py
src/: __init__.py  config.py  evaluate.py  graph.py  ingest.py  llms.py  nodes.py  state.py  tools.py
